[package]
name = "eprompt"
version = "0.1.0"
edition = "2021"
description = "Easy to use interactive prompt library. No complex structs or traits, just a few simple to use functions."
license = "The Unlicense"
license-file = "LICENSE"
homepage = "https://github.com/dmaahs2017/eprompt/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
